--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tlapnet/doxen",
+  "name": "2htech/doxen",
   "description": "Documentation generator for PHP",
   "keywords": [
     "nette",
